apps/clubs/preci/wordpress/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: preci-wordpress
  namespace: preci
  labels:
    app: preci
  annotations:
    kube-score/ignore: >-
      container-security-context-privileged,
      container-security-context-user-group-id,
      container-security-context-readonlyrootfilesystem
spec:
  replicas: 2
  selector:
    matchLabels:
      app: preci
      tier: frontend
  template:
    metadata:
      labels:
        app: preci
        tier: frontend
    spec:
      containers:
        - image: wordpress:php7.4-apache
          imagePullPolicy: Always
          name: preci-wordpress
          ports:
            - name: http
              containerPort: 80
          startupProbe:
            httpGet:
              path: /wp-login.php
              port: http
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /wp-login.php
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /wp-login.php
              port: http
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - name: preci-wordpress-persistent-storage
              mountPath: /var/www/html
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
              ephemeral-storage: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi
              ephemeral-storage: 1Gi
      volumes:
        - name: preci-wordpress-persistent-storage
          persistentVolumeClaim:
            claimName: preci-wp-shared
