apps/clubs/preci/wordpress/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: preci-wordpress-allow-all
  namespace: preci
spec:
  podSelector:
    matchLabels:
      app: preci
      tier: frontend
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}
  egress:
    - {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: preci-mysql-allow-all
  namespace: preci
spec:
  podSelector:
    matchLabels:
      app: mysql
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}
  egress:
    - {}
